--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "initializer_list": "c",
         "ranges": "c",
         "span": "c",
-        "text_encoding": "c"
+        "text_encoding": "c",
+        "numeric": "c"
     }
 }
